tests/NormalTests/paczka1/fuzzy1/86970549.err
Error in line 3: S686 S455 33,5
Error in line 17: S686 S995 82,3
Error in line 23: S686 S455 45,3
Error in line 28: S686 S828 55,4
Error in line 34: RCdJG S828 72,7
